--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,1 @@
-.idea/*
-logs/*
-!.gitkeep
-config/Four51APIAppName.js
-*source.js
-*resources.js
-*source.css
-.orig
-node_modules/*
-*source.js
-*resources.js
-*source.css
+.idea/workspace.xml
